--- a/gradu2.bib
+++ b/gradu2.bib
@@ -6,7 +6,7 @@
   urldate = {2023-07-29},
   abstract = {We’re releasing an analysis showing that since 2012, the amount of compute used in the largest AI training runs has been increasing exponentially with a 3.4-month doubling time (by comparison, Moore’s Law had a 2-year doubling period)[\^footnote-correction]. Since 2012, this metric has grown by more than 300,000x (a 2-year doubling period would yield only a 7x increase). Improvements in compute have been a key component of AI progress, so as long as this trend continues, it’s worth preparing for the implications of systems far outside today’s capabilities.},
   langid = {american},
-  file = {C\:\\Users\\master\\Zotero\\storage\\3XICH52X\\ai-and-compute.html}
+  file = {C:\Users\master\Zotero\storage\3XICH52X\ai-and-compute.html}
 }
 
 @online{bakerAcceleratingNeuralArchitecture2017,
@@ -31,7 +31,7 @@
   booktitle = {Proceedings of {{IEEE Big Data}}},
   author = {Breck, Eric and Cai, Shanqing and Nielsen, Eric and Salib, Michael and Sculley, D.},
   date = {2017},
-  file = {C\:\\Users\\master\\Zotero\\storage\\LEKCIDWU\\Breck et al_2017_The ML Test Score.pdf}
+  file = {C:\Users\master\Zotero\storage\LEKCIDWU\Breck et al_2017_The ML Test Score.pdf}
 }
 
 @online{brunnertPerformanceorientedDevOpsResearch2015,
@@ -71,7 +71,7 @@
   author = {Cawley, Gavin C and Talbot, Nicola L C},
   abstract = {Model selection strategies for machine learning algorithms typically involve the numerical optimisation of an appropriate model selection criterion, often based on an estimator of generalisation performance, such as k-fold cross-validation. The error of such an estimator can be broken down into bias and variance components. While unbiasedness is often cited as a beneficial quality of a model selection criterion, we demonstrate that a low variance is at least as important, as a nonnegligible variance introduces the potential for over-fitting in model selection as well as in training the model. While this observation is in hindsight perhaps rather obvious, the degradation in performance due to over-fitting the model selection criterion can be surprisingly large, an observation that appears to have received little attention in the machine learning literature to date. In this paper, we show that the effects of this form of over-fitting are often of comparable magnitude to differences in performance between learning algorithms, and thus cannot be ignored in empirical evaluation. Furthermore, we show that some common performance evaluation practices are susceptible to a form of selection bias as a result of this form of over-fitting and hence are unreliable. We discuss methods to avoid over-fitting in model selection and subsequent selection bias in performance evaluation, which we hope will be incorporated into best practice. While this study concentrates on cross-validation based model selection, the findings are quite general and apply to any model selection practice involving the optimisation of a model selection criterion evaluated over a finite sample of data, including maximisation of the Bayesian evidence and optimisation of performance bounds.},
   langid = {english},
-  file = {C\:\\Users\\master\\Zotero\\storage\\9KBI9V8C\\Cawley_Talbot_On Over-ﬁtting in Model Selection and Subsequent Selection Bias in Performance.pdf}
+  file = {C:\Users\master\Zotero\storage\9KBI9V8C\Cawley_Talbot_On Over-ﬁtting in Model Selection and Subsequent Selection Bias in Performance.pdf}
 }
 
 @article{chenDeepLearningEdge2019,
@@ -90,7 +90,7 @@
   urldate = {2023-07-29},
   abstract = {Deep learning is currently widely used in a variety of applications, including computer vision and natural language processing. End devices such as smartphones and IoT sensors are generating data that need to be analyzed in real-time using deep learning or used to train deep learning models. However, deep learning inference and training require substantial computation resources to run quickly. Edge computing, where a fine mesh of compute nodes are placed close to end devices, is a viable way to meet the high computation and low latency requirements of deep learning on edge devices, and also provides additional benefits in terms of privacy, bandwidth efficiency, and scalability.},
   langid = {english},
-  file = {C\:\\Users\\master\\Zotero\\storage\\H3RYTRQL\\Chen_Ran_2019_Deep Learning With Edge Computing.pdf}
+  file = {C:\Users\master\Zotero\storage\H3RYTRQL\Chen_Ran_2019_Deep Learning With Edge Computing.pdf}
 }
 
 @online{coteQualityIssuesMachine2022,
@@ -156,7 +156,7 @@
   url = {https://doi.org/10.1145/2347736.2347755},
   urldate = {2023-03-14},
   abstract = {Tapping into the "folk knowledge" needed to advance machine learning applications.},
-  file = {C\:\\Users\\master\\Zotero\\storage\\J2LSZY59\\Domingos_2012_A few useful things to know about machine learning.pdf}
+  file = {C:\Users\master\Zotero\storage\J2LSZY59\Domingos_2012_A few useful things to know about machine learning.pdf}
 }
 
 @inproceedings{eistySurveySoftwareMetric2018,
@@ -200,7 +200,7 @@
   urldate = {2023-02-15},
   abstract = {The design of experiments and the validation of the results achieved with them are vital in any research study. This paper focuses on the use of different Machine Learning approaches for regression tasks in the field of Computational Intelligence and especially on a correct comparison between the different results provided for different methods, as those techniques are complex systems that require further study to be fully understood. A methodology commonly accepted in Computational intelligence is implemented in an R package called RRegrs. This package includes ten simple and complex regression models to carry out predictive modeling using Machine Learning and well-known regression algorithms. The framework for experimental design presented herein is evaluated and validated against RRegrs. Our results are different for three out of five state-of-the-art simple datasets and it can be stated that the selection of the best model according to our proposal is statistically significant and relevant. It is of relevance to use a statistical approach to indicate whether the differences are statistically significant using this kind of algorithms. Furthermore, our results with three real complex datasets report different best models than with the previously published methodology. Our final goal is to provide a complete methodology for the use of different steps in order to compare the results obtained in Computational Intelligence problems, as well as from other fields, such as for bioinformatics, cheminformatics, etc., given that our proposal is open and~modifiable.},
   pmcid = {PMC5136129},
-  file = {C\:\\Users\\master\\Zotero\\storage\\R4QQLYJX\\Fernandez-Lozano et al_2016_A methodology for the design of experiments in computational intelligence with.pdf}
+  file = {C:\Users\master\Zotero\storage\R4QQLYJX\Fernandez-Lozano et al_2016_A methodology for the design of experiments in computational intelligence with.pdf}
 }
 
 @article{finzerDataScienceEducation2013,
@@ -215,7 +215,7 @@
   urldate = {2023-01-17},
   abstract = {The need for people fluent in working with data is growing rapidly and enormously, but U.S. K–12 education does not provide meaningful learning experiences designed to develop understanding of data science concepts or a fluency with data science skills. Data science is inherently inter-disciplinary, so it makes sense to integrate it with existing content areas, but difficulties abound. Consideration of the work involved in doing data science and the habits of mind that lie behind it leads to a way of thinking about integrating data science with mathematics and science. Examples drawn from current activity development in the Data Games project shed some light on what technology-based, data-driven might be like. The project’s ongoing research on learners’ conceptions of organizing data and the relevance to data science education is explained.},
   langid = {english},
-  file = {C\:\\Users\\master\\Zotero\\storage\\YWX2L6LE\\Finzer_2013_The Data Science Education Dilemma.pdf}
+  file = {C:\Users\master\Zotero\storage\YWX2L6LE\Finzer_2013_The Data Science Education Dilemma.pdf}
 }
 
 @article{formanApplestoApplesCrossValidationStudies,
@@ -223,7 +223,7 @@
   author = {Forman, George and Scholz, Martin},
   abstract = {Cross-validation is a mainstay for measuring performance and progress in machine learning. There are subtle differences in how exactly to compute accuracy, F-measure and Area Under the ROC Curve (AUC) in cross-validation studies. However, these details are not discussed in the literature, and incompatible methods are used by various papers and software packages. This leads to inconsistency across the research literature. Anomalies in performance calculations for particular folds and situations go undiscovered when they are buried in aggregated results over many folds and datasets, without ever a person looking at the intermediate performance measurements. This research note clarifies and illustrates the differences, and it provides guidance for how best to measure classification performance under cross-validation. In particular, there are several divergent methods used for computing F-measure, which is often recommended as a performance measure under class imbalance, e.g., for text classification domains and in one-vs.-all reductions of datasets having many classes. We show by experiment that all but one of these computation methods leads to biased measurements, especially under high class imbalance. This paper is of particular interest to those designing machine learning software libraries and researchers focused on high class imbalance.},
   langid = {english},
-  file = {C\:\\Users\\master\\Zotero\\storage\\747PD6Q2\\Forman_Scholz_Apples-to-Apples in Cross-Validation Studies.pdf}
+  file = {C:\Users\master\Zotero\storage\747PD6Q2\Forman_Scholz_Apples-to-Apples in Cross-Validation Studies.pdf}
 }
 
 @online{hestnessDeepLearningScaling2017,
@@ -239,7 +239,7 @@
   langid = {english},
   pubstate = {preprint},
   keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
-  file = {C\:\\Users\\master\\Zotero\\storage\\Z3LL9RNB\\Hestness et al_2017_Deep Learning Scaling is Predictable, Empirically.pdf}
+  file = {C:\Users\master\Zotero\storage\Z3LL9RNB\Hestness et al_2017_Deep Learning Scaling is Predictable, Empirically.pdf}
 }
 
 @online{hintonDistillingKnowledgeNeural2015,
@@ -307,6 +307,21 @@
   file = {C\:\\Users\\master\\Zotero\\storage\\8U86FCTW\\Janocha_Czarnecki_2017_On Loss Functions for Deep Neural Networks in Classification.pdf;C\:\\Users\\master\\Zotero\\storage\\3PW72J4V\\1702.html}
 }
 
+@article{karlMultiObjectiveHyperparameterOptimization2023,
+  title = {Multi-{{Objective Hyperparameter Optimization}} in {{Machine Learning}} – {{An Overview}}},
+  author = {Karl, Florian and Pielok, Tobias and Moosbauer, Julia and Pfisterer, Florian and Coors, Stefan and Binder, Martin and Schneider, Lennart and Thomas, Janek and Richter, Jakob and Lang, Michel and Garrido-Merchán, Eduardo C. and Branke, Juergen and Bischl, Bernd},
+  date = {2023-09-05},
+  journaltitle = {ACM Transactions on Evolutionary Learning and Optimization},
+  shortjournal = {ACM Trans. Evol. Learn. Optim.},
+  doi = {10.1145/3610536},
+  url = {https://dl.acm.org/doi/10.1145/3610536},
+  urldate = {2023-10-17},
+  abstract = {Hyperparameter optimization constitutes a large part of typical modern machine learning workflows. This arises from the fact that machine learning methods and corresponding preprocessing steps often only yield optimal performance when hyperparameters are properly tuned. But in many applications, we are not only interested in optimizing ML pipelines solely for predictive accuracy; additional metrics or constraints must be considered when determining an optimal configuration, resulting in a multi-objective optimization problem. This is often neglected in practice, due to a lack of knowledge and readily available software implementations for multi-objective hyperparameter optimization. In this work, we introduce the reader to the basics of multi-objective hyperparameter optimization and motivate its usefulness in applied ML. Furthermore, we provide an extensive survey of existing optimization strategies, both from the domain of evolutionary algorithms and Bayesian optimization. We illustrate the utility of MOO in several specific ML applications, considering objectives such as operating conditions, prediction time, sparseness, fairness, interpretability and robustness.},
+  keywords = {Bayesian Optimization,Multi-Objective Hyperparameter Optimization,Neural Architecture Search},
+  annotation = {Just Accepted},
+  file = {C:\Users\master\Zotero\storage\5UXS5E2G\Karl et al_2023_Multi-Objective Hyperparameter Optimization in Machine Learning – An Overview.pdf}
+}
+
 @book{kounevSystemsBenchmarkingScientists2020,
   title = {Systems {{Benchmarking}}: {{For Scientists}} and {{Engineers}}},
   shorttitle = {Systems {{Benchmarking}}},
@@ -319,7 +334,7 @@
   urldate = {2023-08-23},
   isbn = {978-3-030-41704-8 978-3-030-41705-5},
   langid = {english},
-  file = {C\:\\Users\\master\\Zotero\\storage\\4KUA98VS\\Kounev et al_2020_Systems Benchmarking.pdf}
+  file = {C:\Users\master\Zotero\storage\4KUA98VS\Kounev et al_2020_Systems Benchmarking.pdf}
 }
 
 @article{kreuzbergerMachineLearningOperations2023,
@@ -348,7 +363,7 @@
   publisher = {{JMLR.org}},
   location = {{Sydney, NSW, Australia}},
   abstract = {This paper develops a novel tree-based algorithm, called Bonsai, for efficient prediction on IoT devices - such as those based on the Arduino Uno board having an 8 bit ATmega328P microcontroller operating at 16 MHz with no native floating point support, 2 KB RAM and 32 KB read-only flash. Bonsai maintains prediction accuracy while minimizing model size and prediction costs by: (a) developing a tree model which learns a single, shallow, sparse tree with powerful nodes; (b) sparsely projecting all data into a low-dimensional space in which the tree is learnt; and (c) jointly learning all tree and projection parameters. Experimental results on multiple benchmark datasets demonstrate that Bonsai can make predictions in milliseconds even on slow microcontrollers, can fit in KB of memory, has lower battery consumption than all other algorithms while achieving prediction accuracies that can be as much as 30\% higher than state-of-the-art methods for resource-efficient machine learning. Bonsai is also shown to generalize to other resource constrained settings beyond IoT by generating significantly better search results as compared to Bing's L3 ranker when the model size is restricted to 300 bytes. Bonsai's code can be downloaded from (BonsaiCode).},
-  file = {C\:\\Users\\master\\Zotero\\storage\\DTSA6WCD\\Kumar et al_2017_Resource-efficient machine learning in 2 KB RAM for the internet of things.pdf}
+  file = {C:\Users\master\Zotero\storage\DTSA6WCD\Kumar et al_2017_Resource-efficient machine learning in 2 KB RAM for the internet of things.pdf}
 }
 
 @online{leBuildingHighlevelFeatures2012,
@@ -384,7 +399,7 @@
   issue = {7553},
   langid = {english},
   keywords = {Computer science,Mathematics and computing},
-  file = {C\:\\Users\\master\\Zotero\\storage\\Z4NV27YU\\LeCun et al_2015_Deep learning.pdf}
+  file = {C:\Users\master\Zotero\storage\Z4NV27YU\LeCun et al_2015_Deep learning.pdf}
 }
 
 @online{liawTuneResearchPlatform2018,
@@ -437,7 +452,7 @@
   isbn = {978-3-319-10602-1},
   langid = {english},
   keywords = {Common Object,Object Category,Object Detection,Object Instance,Scene Understanding},
-  file = {C\:\\Users\\master\\Zotero\\storage\\Z4Q52KNW\\Lin et al_2014_Microsoft COCO.pdf}
+  file = {C:\Users\master\Zotero\storage\Z4Q52KNW\Lin et al_2014_Microsoft COCO.pdf}
 }
 
 @inproceedings{linROUGEPackageAutomatic2004,
@@ -451,7 +466,7 @@
   location = {{Barcelona, Spain}},
   url = {https://aclanthology.org/W04-1013},
   urldate = {2023-08-27},
-  file = {C\:\\Users\\master\\Zotero\\storage\\UBCXNB3P\\Lin_2004_ROUGE.pdf}
+  file = {C:\Users\master\Zotero\storage\UBCXNB3P\Lin_2004_ROUGE.pdf}
 }
 
 @online{liSystemMassivelyParallel2020,
@@ -537,7 +552,7 @@
   abstract = {Machine Learning (ML) methods have been proposed in the academic literature as alternatives to statistical ones for time series forecasting. Yet, scant evidence is available about their relative performance in terms of accuracy and computational requirements. The purpose of this paper is to evaluate such performance across multiple forecasting horizons using a large subset of 1045 monthly time series used in the M3 Competition. After comparing the post-sample accuracy of popular ML methods with that of eight traditional statistical ones, we found that the former are dominated across both accuracy measures used and for all forecasting horizons examined. Moreover, we observed that their computational requirements are considerably greater than those of statistical methods. The paper discusses the results, explains why the accuracy of ML models is below that of statistical ones and proposes some possible ways forward. The empirical results found in our research stress the need for objective and unbiased ways to test the performance of forecasting methods that can be achieved through sizable and open competitions allowing meaningful comparisons and definite conclusions.},
   langid = {english},
   keywords = {Algorithms,Artificial intelligence,Computing methods,Forecasting,Neural networks,Preprocessing,Statistical methods,Support vector machines},
-  file = {C\:\\Users\\master\\Zotero\\storage\\VQB8HMTP\\Makridakis et al_2018_Statistical and Machine Learning forecasting methods.pdf}
+  file = {C:\Users\master\Zotero\storage\VQB8HMTP\Makridakis et al_2018_Statistical and Machine Learning forecasting methods.pdf}
 }
 
 @article{mishraDevOpsSoftwareQuality2020,
@@ -557,6 +572,25 @@
   langid = {english},
   keywords = {Automation,Development,DevOps,Measurement,Operations,Software,Software quality,Systematic mapping},
   file = {C\:\\Users\\master\\Zotero\\storage\\FI2BPQCJ\\Mishra_Otaiwi_2020_DevOps and software quality.pdf;C\:\\Users\\master\\Zotero\\storage\\NTDWUG9S\\S1574013720304081.html}
+}
+
+@article{morales-hernandezSurveyMultiobjectiveHyperparameter2023,
+  title = {A Survey on Multi-Objective Hyperparameter Optimization Algorithms for Machine Learning},
+  author = {Morales-Hernández, Alejandro and Van Nieuwenhuyse, Inneke and Rojas Gonzalez, Sebastian},
+  date = {2023-08-01},
+  journaltitle = {Artificial Intelligence Review},
+  shortjournal = {Artif Intell Rev},
+  volume = {56},
+  number = {8},
+  pages = {8043--8093},
+  issn = {1573-7462},
+  doi = {10.1007/s10462-022-10359-2},
+  url = {https://doi.org/10.1007/s10462-022-10359-2},
+  urldate = {2023-10-17},
+  abstract = {Hyperparameter optimization (HPO) is a necessary step to ensure the best possible performance of Machine Learning (ML) algorithms. Several methods have been developed to perform HPO; most of these are focused on optimizing one performance measure (usually an error-based measure), and the literature on such single-objective HPO problems is vast. Recently, though, algorithms have appeared that focus on optimizing multiple conflicting objectives simultaneously. This article presents a systematic survey of the literature published between 2014 and 2020 on multi-objective HPO algorithms, distinguishing between metaheuristic-based algorithms, metamodel-based algorithms and approaches using a mixture of both. We also discuss the quality metrics used to compare multi-objective HPO procedures and present future research directions.},
+  langid = {english},
+  keywords = {Hyperparameter optimization,Machine learning,Meta-heuristic,Metamodel,Multi-objective optimization},
+  file = {C:\Users\master\Zotero\storage\HZ3JA67J\Morales-Hernández et al_2023_A survey on multi-objective hyperparameter optimization algorithms for machine.pdf}
 }
 
 @article{myllyahoMisbehaviourFaultTolerance2022,
@@ -620,7 +654,7 @@
   urldate = {2023-07-24},
   abstract = {We’ve trained a model called ChatGPT which interacts in a conversational way. The dialogue format makes it possible for ChatGPT to answer followup questions, admit its mistakes, challenge incorrect premises, and reject inappropriate requests.},
   langid = {american},
-  file = {C\:\\Users\\master\\Zotero\\storage\\6X4N5BY7\\chatgpt.html}
+  file = {C:\Users\master\Zotero\storage\6X4N5BY7\chatgpt.html}
 }
 
 @inproceedings{pereraImproveSoftwareQuality2017,
@@ -718,7 +752,7 @@
   url = {https://proceedings.neurips.cc/paper_files/paper/2015/hash/86df7dcfd896fcaf2674f757a2463eba-Abstract.html},
   urldate = {2023-08-13},
   abstract = {Machine learning offers a fantastically powerful toolkit for building useful complexprediction systems quickly. This paper argues it is dangerous to think ofthese quick wins as coming for free. Using the software engineering frameworkof technical debt, we find it is common to incur massive ongoing maintenancecosts in real-world ML systems. We explore several ML-specific risk factors toaccount for in system design. These include boundary erosion, entanglement,hidden feedback loops, undeclared consumers, data dependencies, configurationissues, changes in the external world, and a variety of system-level anti-patterns.},
-  file = {C\:\\Users\\master\\Zotero\\storage\\XDLRWE7U\\Sculley et al_2015_Hidden Technical Debt in Machine Learning Systems.pdf}
+  file = {C:\Users\master\Zotero\storage\XDLRWE7U\Sculley et al_2015_Hidden Technical Debt in Machine Learning Systems.pdf}
 }
 
 @article{shallueMeasuringEffectsData2019,
@@ -733,8 +767,7 @@
   url = {http://jmlr.org/papers/v20/18-789.html},
   urldate = {2023-09-28},
   abstract = {Recent hardware developments have dramatically increased the scale of data parallelism available for neural network training. Among the simplest ways to harness next-generation hardware is to increase the batch size in standard mini-batch neural network training algorithms. In this work, we aim to experimentally characterize the effects of increasing the batch size on training time, as measured by the number of steps necessary to reach a goal out-of-sample error. We study how this relationship varies with the training algorithm, model, and data set, and find extremely large variation between workloads. Along the way, we show that disagreements in the literature on how batch size affects model quality can largely be explained by differences in metaparameter tuning and compute budgets at different batch sizes. We find no evidence that larger batch sizes degrade out-of-sample performance. Finally, we discuss the implications of our results on efforts to train neural networks much faster in the future. Our experimental data is publicly available as a database of 71,638,836 loss measurements taken over the course of training for 168,160 individual models across 35 workloads.},
-  keywords = {\_tablet},
-  file = {C\:\\Users\\master\\Zotero\\storage\\LZPDZCG8\\Shallue et al_2019_Measuring the Effects of Data Parallelism on Neural Network Training.pdf}
+  file = {C:\Users\master\Zotero\storage\LZPDZCG8\Shallue et al_2019_Measuring the Effects of Data Parallelism on Neural Network Training.pdf}
 }
 
 @online{shankarOperationalizingMachineLearning2022,
@@ -790,7 +823,7 @@
   isbn = {978-3-319-18612-2},
   langid = {english},
   keywords = {Cloud Service,Continuous Delivery,Cultural Aspect,Service Failure,Software Process Improvement},
-  file = {C\:\\Users\\master\\Zotero\\storage\\TGE2W5BX\\Smeds et al_2015_DevOps.pdf}
+  file = {C:\Users\master\Zotero\storage\TGE2W5BX\Smeds et al_2015_DevOps.pdf}
 }
 
 @article{sokolovaSystematicAnalysisPerformance2009,
@@ -820,7 +853,7 @@
   abstract = {We are delighted to announce the public release of Stable Diffusion and the launch of DreamStudio Lite.},
   langid = {british},
   organization = {{Stability AI}},
-  file = {C\:\\Users\\master\\Zotero\\storage\\MM67JQZT\\stable-diffusion-public-release.html}
+  file = {C:\Users\master\Zotero\storage\MM67JQZT\stable-diffusion-public-release.html}
 }
 
 @article{strubellEnergyPolicyConsiderations2020,
@@ -838,7 +871,7 @@
   abstract = {The field of artificial intelligence has experienced a dramatic methodological shift towards large neural networks trained on plentiful data. This shift has been fueled by recent advances in hardware and techniques enabling remarkable levels of computation, resulting in impressive advances in AI across many applications. However, the massive computation required to obtain these exciting results is costly both financially, due to the price of specialized hardware and electricity or cloud compute time, and to the environment, as a result of non-renewable energy used to fuel modern tensor processing hardware. In a paper published this year at ACL, we brought this issue to the attention of NLP researchers by quantifying the approximate financial and environmental costs of training and tuning neural network models for NLP (Strubell, Ganesh, and McCallum 2019). In this extended abstract, we briefly summarize our findings in NLP, incorporating updated estimates and broader information from recent related publications, and provide actionable recommendations to reduce costs and improve equity in the machine learning and artificial intelligence community.},
   issue = {09},
   langid = {english},
-  file = {C\:\\Users\\master\\Zotero\\storage\\GYKMMFTG\\Strubell et al_2020_Energy and Policy Considerations for Modern Deep Learning Research.pdf}
+  file = {C:\Users\master\Zotero\storage\GYKMMFTG\Strubell et al_2020_Energy and Policy Considerations for Modern Deep Learning Research.pdf}
 }
 
 @online{thompsonComputationalLimitsDeep2022,
@@ -854,7 +887,7 @@
   langid = {english},
   pubstate = {preprint},
   keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
-  file = {C\:\\Users\\master\\Zotero\\storage\\L9G7ZIJD\\Thompson et al_2022_The Computational Limits of Deep Learning.pdf}
+  file = {C:\Users\master\Zotero\storage\L9G7ZIJD\Thompson et al_2022_The Computational Limits of Deep Learning.pdf}
 }
 
 @inproceedings{torralbaUnbiasedLookDataset2011,
@@ -872,7 +905,7 @@
   eventtitle = {2011 {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}} ({{CVPR}})},
   isbn = {978-1-4577-0394-2},
   langid = {english},
-  file = {C\:\\Users\\master\\Zotero\\storage\\MC89PBKP\\Torralba_Efros_2011_Unbiased look at dataset bias.pdf}
+  file = {C:\Users\master\Zotero\storage\MC89PBKP\Torralba_Efros_2011_Unbiased look at dataset bias.pdf}
 }
 
 @online{touvronLLaMAOpenEfficient2023,
@@ -907,7 +940,7 @@
   urldate = {2023-01-17},
   abstract = {The DevOps movement intends to improve communication, collaboration, and integration between software developers (Dev) and IT operations professionals (Ops). Automation of software quality assurance is key to DevOps success. We present how automated performance benchmarks may be included into continuous integration. As an example, we report on regression benchmarks for application monitoring frameworks and illustrate the inclusion of automated benchmarks into continuous integration setups.},
   keywords = {Jenkins,Kieker,MooBench},
-  file = {C\:\\Users\\master\\Zotero\\storage\\L5MUF3HG\\Waller et al_2015_Including Performance Benchmarks into Continuous Integration to Enable DevOps.pdf}
+  file = {C:\Users\master\Zotero\storage\L5MUF3HG\Waller et al_2015_Including Performance Benchmarks into Continuous Integration to Enable DevOps.pdf}
 }
 
 @inproceedings{wirthCrispdmStandardProcess2000,
@@ -918,7 +951,7 @@
   url = {https://www.semanticscholar.org/paper/Crisp-dm%3A-towards-a-standard-process-modell-for-Wirth-Hipp/48b9293cfd4297f855867ca278f7069abc6a9c24},
   urldate = {2023-06-15},
   abstract = {The CRISP-DM (CRoss Industry Standard Process for Data Mining) project proposed a comprehensive process model for carrying out data mining projects. The process model is independent of both the industry sector and the technology used. In this paper we argue in favor of a standard process model for data mining and report some experiences with the CRISP-DM process model in practice. We applied and tested the CRISP-DM methodology in a response modeling application project. The final goal of the project was to specify a process which can be reliably and efficiently repeated by different people and adapted to different situations. The initial projects were performed by experienced data mining people; future projects are to be performed by people with lower technical skills and with very little time to experiment with different approaches. It turned out, that the CRISP-DM methodology with its distinction of generic and specialized process models provides both the structure and the flexibility necessary to suit the needs of both groups. The generic CRISP-DM process model is useful for planning, communication within and outside the project team, and documentation. The generic check-lists are helpful even for experienced people. The generic process model provides an excellent foundation for developing a specialized process model which prescribes the steps to be taken in detail and which gives practical advice for all these steps.},
-  file = {C\:\\Users\\master\\Zotero\\storage\\3NW8IB87\\Wirth_Hipp_2000_Crisp-dm.pdf}
+  file = {C:\Users\master\Zotero\storage\3NW8IB87\Wirth_Hipp_2000_Crisp-dm.pdf}
 }
 
 @inproceedings{xanthopoulosPuttingHumanBack2020,
@@ -929,7 +962,7 @@
   urldate = {2023-01-25},
   abstract = {Automated Machine Learning (AutoML) is a rapidly rising subfield of Machine Learning. AutoML aims to fully automate the machine learning process end-to-end, democratizing Machine Learning to non-experts and drastically increasing the productivity of expert analysts. So far, most comparisons of AutoML systems focus on quantitative criteria such as predictive performance and execution time. In this paper, we examine AutoML services for predictive modeling tasks from a user’s perspective, going beyond predictive performance. We present a wide palette of criteria and dimensions on which to evaluate and compare these services as a user. This qualitative comparative methodology is applied on seven AutoML systems, namely Auger.AI, BigML, H2O’s Driverless AI, Darwin, Just Add Data Bio, RapidMiner, and Watson. The comparison indicates the strengths and weaknesses of each service, the needs that it covers, the segment of users that is most appropriate for, and the possibilities for improvements.},
   eventtitle = {{{EDBT}}/{{ICDT Workshops}}},
-  file = {C\:\\Users\\master\\Zotero\\storage\\SA4IQ5AH\\Xanthopoulos et al_2020_Putting the Human Back in the AutoML Loop.pdf}
+  file = {C:\Users\master\Zotero\storage\SA4IQ5AH\Xanthopoulos et al_2020_Putting the Human Back in the AutoML Loop.pdf}
 }
 
 @article{yangHyperparameterOptimizationMachine2020,
@@ -982,5 +1015,5 @@
   url = {https://www.semanticscholar.org/paper/Accelerating-the-Machine-Learning-Lifecycle-with-Zaharia-Chen/b2e0b79e6f180af2e0e559f2b1faba66b2bd578a},
   urldate = {2023-03-14},
   abstract = {Machine learning development creates multiple new challenges that are not present in a traditional software development lifecycle. These include keeping track of the myriad inputs to an ML application (e.g., data versions, code and tuning parameters), reproducing results, and production deployment. In this paper, we summarize these challenges from our experience with Databricks customers, and describe MLflow, an open source platform we recently launched to streamline the machine learning lifecycle. MLflow covers three key challenges: experimentation, reproducibility, and model deployment, using generic APIs that work with any ML library, algorithm and programming language. The project has a rapidly growing open source community, with over 50 contributors since its launch in June 2018.},
-  file = {C\:\\Users\\master\\Zotero\\storage\\6RA7FM6Z\\Zaharia et al_2018_Accelerating the Machine Learning Lifecycle with MLflow.pdf}
+  file = {C:\Users\master\Zotero\storage\6RA7FM6Z\Zaharia et al_2018_Accelerating the Machine Learning Lifecycle with MLflow.pdf}
 }
