--- a/gradu2.bib
+++ b/gradu2.bib
@@ -93,6 +93,23 @@
   file = {C:\Users\master\Zotero\storage\H3RYTRQL\Chen_Ran_2019_Deep Learning With Edge Computing.pdf}
 }
 
+@inproceedings{chenDevelopmentsMLflowSystem2020,
+  title = {Developments in {{MLflow}}: {{A System}} to {{Accelerate}} the {{Machine Learning Lifecycle}}},
+  shorttitle = {Developments in {{MLflow}}},
+  booktitle = {Proceedings of the {{Fourth International Workshop}} on {{Data Management}} for {{End-to-End Machine Learning}}},
+  author = {Chen, Andrew and Chow, Andy and Davidson, Aaron and DCunha, Arjun and Ghodsi, Ali and Hong, Sue Ann and Konwinski, Andy and Mewald, Clemens and Murching, Siddharth and Nykodym, Tomas and Ogilvie, Paul and Parkhe, Mani and Singh, Avesh and Xie, Fen and Zaharia, Matei and Zang, Richard and Zheng, Juntai and Zumar, Corey},
+  date = {2020-06-17},
+  series = {{{DEEM}}'20},
+  pages = {1--4},
+  publisher = {{Association for Computing Machinery}},
+  location = {{New York, NY, USA}},
+  doi = {10.1145/3399579.3399867},
+  url = {https://doi.org/10.1145/3399579.3399867},
+  urldate = {2023-10-25},
+  abstract = {MLflow is a popular open source platform for managing ML development, including experiment tracking, reproducibility, and deployment. In this paper, we discuss user feedback collected since MLflow was launched in 2018, as well as three major features we have introduced in response to this feedback: a Model Registry for collaborative model management and review, tools for simplifying ML code instrumentation, and experiment analytics functions for extracting insights from millions of ML experiments.},
+  isbn = {978-1-4503-8023-2}
+}
+
 @online{coteQualityIssuesMachine2022,
   title = {Quality Issues in {{Machine Learning Software Systems}}},
   author = {Côté, Pierre-Olivier and Nikanjam, Amin and Bouchoucha, Rached and Khomh, Foutse},
@@ -123,6 +140,20 @@
   eventtitle = {{{IEEE Signal Processing Magazine}}},
   keywords = {Machine learning},
   file = {C\:\\Users\\master\\Zotero\\storage\\YD2EFMVK\\Deng_2012_The MNIST Database of Handwritten Digit Images for Machine Learning Research.pdf;C\:\\Users\\master\\Zotero\\storage\\8XXBPIR7\\6296535.html}
+}
+
+@online{DevelopmentsMLflowProceedings,
+  title = {Developments in {{MLflow}} | {{Proceedings}} of the {{Fourth International Workshop}} on {{Data Management}} for {{End-to-End Machine Learning}}},
+  url = {https://dl.acm.org/doi/10.1145/3399579.3399867},
+  urldate = {2023-10-26},
+  file = {C:\Users\master\Zotero\storage\GAHHF3L9\3399579.html}
+}
+
+@online{DevelopmentsMLflowProceedingsa,
+  title = {Developments in {{MLflow}} | {{Proceedings}} of the {{Fourth International Workshop}} on {{Data Management}} for {{End-to-End Machine Learning}}},
+  url = {https://dl.acm.org/doi/10.1145/3399579.3399867},
+  urldate = {2023-10-26},
+  file = {C:\Users\master\Zotero\storage\ABFJZMZD\3399579.html}
 }
 
 @online{dodgeFineTuningPretrainedLanguage2020,
@@ -655,6 +686,21 @@
   abstract = {We’ve trained a model called ChatGPT which interacts in a conversational way. The dialogue format makes it possible for ChatGPT to answer followup questions, admit its mistakes, challenge incorrect premises, and reject inappropriate requests.},
   langid = {american},
   file = {C:\Users\master\Zotero\storage\6X4N5BY7\chatgpt.html}
+}
+
+@article{pedregosaScikitlearnMachineLearning2011,
+  title = {Scikit-Learn: {{Machine Learning}} in {{Python}}},
+  shorttitle = {Scikit-Learn},
+  author = {Pedregosa, Fabian and Varoquaux, Gaël and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, Édouard},
+  date = {2011-11-01},
+  journaltitle = {The Journal of Machine Learning Research},
+  shortjournal = {J. Mach. Learn. Res.},
+  volume = {12},
+  pages = {2825--2830},
+  issn = {1532-4435},
+  abstract = {Scikit-learn is a Python module integrating a wide range of state-of-the-art machine learning algorithms for medium-scale supervised and unsupervised problems. This package focuses on bringing machine learning to non-specialists using a general-purpose high-level language. Emphasis is put on ease of use, performance, documentation, and API consistency. It has minimal dependencies and is distributed under the simplified BSD license, encouraging its use in both academic and commercial settings. Source code, binaries, and documentation can be downloaded from http://scikit-learn.sourceforge.net.},
+  issue = {null},
+  file = {C:\Users\master\Zotero\storage\C6GND4H9\Pedregosa et al_2011_Scikit-learn.pdf}
 }
 
 @inproceedings{pereraImproveSoftwareQuality2017,
