--- a/thesis/gradu2.tex
+++ b/thesis/gradu2.tex
@@ -8,7 +8,7 @@
 \usepackage{amsmath} % useful for math (optional)
 
 \usepackage{booktabs} % good for beautiful tables
-\usepackage{multirow}
+\usepackage{multirow, makecell}
 
 % TODO remove todo
 \usepackage{xargs}                      % Use more than one optional parameter in a new commands
